# pull-canvas-groups

./: .gitignore  README.md  example_config.toml  pyproject.toml  requirements.txt
src/: __main__.py  pull_groups.py
